--- a/index.html
+++ b/index.html
@@ -1,154 +1,175 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Случайный 100x Переводчик</title>
+<title>Turbo Translator</title>
 <style>
     body {
-        font-family: Arial, sans-serif;
-        background-color: #04170e;
-        color: #e0f7f7;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        min-height: 100vh;
         margin: 0;
+        font-family: "Segoe UI", Arial, sans-serif;
+        background: #111214;
+        color: #ffffff;
+        overflow-x: hidden;
+    }
+
+    header {
         padding: 20px;
-        transition: background 0.5s ease;
-    }
-    h1 {
-        margin-bottom: 60px;
-        color: #00ffff;
-        transition: color 0.5s ease;
+        font-size: 26px;
+        font-weight: 300;
         text-align: center;
+        opacity: 0;
+        animation: fadeIn 0.9s ease forwards;
     }
-    select {
-        position: absolute;
-        left: 20px;
-        top: 80px; /* ниже заголовка */
-        padding: 8px 12px;
-        border-radius: 8px;
-        border: none;
-        background-color: #006666;
-        color: #e0f7f7;
+
+    .container {
+        max-width: 800px;
+        margin: 0 auto;
+        padding: 25px;
+        opacity: 0;
+        animation: fadeIn 1.2s ease forwards;
+    }
+
+    label {
+        display: block;
+        margin-bottom: 8px;
+        font-weight: 300;
         font-size: 16px;
-        transition: background 0.3s, transform 0.3s;
     }
-    select:hover {
-        background-color: #008080;
-        transform: scale(1.05);
-    }
-    textarea {
-        width: 90%;
-        max-width: 600px;
-        height: 150px;
-        padding: 10px;
-        border-radius: 8px;
+
+    select, input, textarea, button {
+        width: 100%;
+        padding: 12px;
+        margin-bottom: 18px;
         border: none;
-        resize: none;
-        background-color: #006666;
-        color: #e0f7f7;
-        font-size: 16px;
-        margin-bottom: 15px;
-        transition: background 0.3s, transform 0.3s;
-    }
-    textarea:focus {
-        background-color: #008080;
-        transform: scale(1.02);
+        border-radius: 6px;
+        background: #1a1b1d;
+        color: white;
+        font-size: 15px;
+        font-weight: 300;
         outline: none;
+        transition: 0.3s ease;
     }
+
+    select:hover, input:hover, textarea:hover {
+        background: #232427;
+    }
+
     button {
-        padding: 10px 20px;
-        border: none;
-        border-radius: 8px;
-        background-color: #00b3b3;
-        color: #004d4d;
+        background: #005f73;
         cursor: pointer;
-        transition: background 0.3s, transform 0.3s;
+        font-size: 17px;
+        font-weight: 300;
     }
+
     button:hover {
-        background-color: #009999;
-        transform: scale(1.05);
+        background: #008ea3;
     }
-    #result {
-        margin-top: 20px;
-        width: 90%;
-        max-width: 600px;
-        padding: 15px;
-        background-color: #006666;
-        border-radius: 8px;
-        min-height: 100px;
-        white-space: pre-wrap;
-        transition: background 0.3s, transform 0.3s;
+
+    #alertBox {
+        position: fixed;
+        top: 15px;
+        right: 15px;
+        background: #8b0000;
+        padding: 15px 22px;
+        border-radius: 6px;
+        font-size: 15px;
+        opacity: 0;
+        transition: opacity 0.4s ease;
+        pointer-events: none;
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(12px); }
+        to   { opacity: 1; transform: translateY(0); }
     }
 </style>
 </head>
 <body>
-<h1>Случайный 100x Переводчик</h1>
-<select id="finalLang">
-    <option value="en">Английский</option>
-    <option value="ru" selected>Русский</option>
-    <option value="fr">Французский</option>
-    <option value="de">Немецкий</option>
-    <option value="es">Испанский</option>
-    <option value="it">Итальянский</option>
-    <option value="ja">Японский</option>
-    <option value="ko">Корейский</option>
-    <option value="zh-CN">Китайский</option>
-    <option value="ar">Арабский</option>
-</select>
 
-<textarea id="inputText" placeholder="Введите текст для перевода..."></textarea>
-<button onclick="translateRandom100()">Перевести 100 раз</button>
-<div id="result"></div>
+<header>Turbo Translator</header>
+
+<div class="container">
+
+    <label for="finalLang">Final language:</label>
+    <select id="finalLang">
+        <option value="en">English</option>
+        <option value="uk">Ukrainian</option>
+        <option value="ru">Russian</option>
+        <option value="pl">Polish</option>
+        <option value="fr">French</option>
+        <option value="de">German</option>
+        <option value="es">Spanish</option>
+        <option value="it">Italian</option>
+        <option value="ro">Romanian</option>
+        <option value="tr">Turkish</option>
+        <option value="ja">Japanese</option>
+        <option value="zh-CN">Chinese</option>
+        <option value="ko">Korean</option>
+        <option value="ar">Arabic</option>
+        <option value="hi">Hindi</option>
+    </select>
+
+    <label for="count">Translations:</label>
+    <input id="count" type="number" min="10" max="150" value="50">
+
+    <label for="inputText">Enter text:</label>
+    <textarea id="inputText" rows="5"></textarea>
+
+    <button id="translateBtn">Translate</button>
+
+    <label for="outputText">Result:</label>
+    <textarea id="outputText" rows="7" readonly></textarea>
+</div>
+
+<div id="alertBox">You try to translate too often. Please wait a bit.</div>
 
 <script>
-const allLanguages = ['en','ru','fr','de','es','it','ja','ko','zh-CN','ar'];
+const translateBtn = document.getElementById("translateBtn");
+const alertBox = document.getElementById("alertBox");
 
-async function translateText(text, source, target) {
-    try {
-        const url = `https://translate.googleapis.com/translate_a/single?client=gtx&sl=${source}&tl=${target}&dt=t&q=${encodeURIComponent(text)}`;
-        const response = await fetch(url);
-        const data = await response.json();
-        return data[0].map(item => item[0]).join('');
-    } catch(e) {
-        console.error('Ошибка перевода:', e);
-        return text;
-    }
+let lastClick = 0;
+
+// Escape input to avoid malicious characters
+const safe = t => t.replace(/[<>"'();]/g, "");
+
+async function translate(text, lang) {
+    const url = "https://translate.googleapis.com/translate_a/single?client=gtx&sl=auto&tl=" + lang + "&dt=t&q=" + encodeURIComponent(text);
+    const res = await fetch(url);
+    const data = await res.json();
+    return data[0].map(x => x[0]).join("");
 }
 
-function getRandomLanguage(exclude) {
-    const langs = allLanguages.filter(lang => lang !== exclude);
+function randomLang() {
+    const langs = ["en","uk","ru","pl","fr","de","es","it","ja","ko","zh-CN","ro","tr","ar","hi","sv","nl","pt","fi"];
     return langs[Math.floor(Math.random() * langs.length)];
 }
 
-async function translateRandom100() {
-    let text = document.getElementById('inputText').value;
-    const resultDiv = document.getElementById('result');
-    const finalLang = document.getElementById('finalLang').value;
-
-    if(!text.trim()) {
-        resultDiv.textContent = "Введите текст!";
+async function runTranslation() {
+    let now = Date.now();
+    if (now - lastClick < 10000) {
+        alertBox.style.opacity = "1";
+        setTimeout(() => alertBox.style.opacity = "0", 2500);
         return;
     }
+    lastClick = now;
 
-    resultDiv.textContent = "Переводим... Пожалуйста, подождите.";
+    let text = safe(document.getElementById("inputText").value);
+    let finalLang = document.getElementById("finalLang").value;
+    let count = Number(document.getElementById("count").value);
+    const output = document.getElementById("outputText");
 
-    let currentLang = 'en';
-    for(let i = 0; i < 100; i++) {
-        let nextLang = getRandomLanguage(currentLang);
-        text = await translateText(text, currentLang, nextLang);
-        currentLang = nextLang;
-        resultDiv.textContent = `Итерация ${i+1}:\n${text}`;
+    for (let i = 0; i < count; i++) {
+        text = await translate(text, randomLang());
+        let percent = Math.floor(((i+1)/count)*100);
+        output.value = `[${percent}%] ${text}`;
     }
 
-    if(currentLang !== finalLang) {
-        text = await translateText(text, currentLang, finalLang);
-    }
-
-    resultDiv.textContent = `Результат после 100 случайных переводов:\n${text}`;
+    text = await translate(text, finalLang);
+    output.value = `[100%] ${text}`;
 }
+
+translateBtn.onclick = runTranslation;
 </script>
+
 </body>
 </html>
